@@ -2,20 +2,14 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-
-    <parent>
-        <groupId>com.ofpay</groupId>
-        <artifactId>ofpay-parent</artifactId>
-        <version>1.0.3-RELEASE</version>
-    </parent>
-
-
     <groupId>com.iluvcoding</groupId>
     <artifactId>mainSite</artifactId>
     <packaging>pom</packaging>
     <version>1.0.0-SNAPSHOT</version>
 
     <properties>
+        <maven.compiler.source>1.7</maven.compiler.source>
+        <maven.compiler.target>1.7</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
         <git.url>https://github.com/BeastBeaten/iluvcodingMain.git</git.url>
@@ -29,6 +23,11 @@
         <fastjson.version>1.1.31</fastjson.version>
         <springframework.version>4.1.7.RELEASE</springframework.version>
         <org.dbunit.version>2.4.9</org.dbunit.version>
+        <slf4j.version>1.7.5</slf4j.version>
+
+        <mybatis.version>3.2.0</mybatis.version>
+        <mybatis-spring.version>1.2.0</mybatis-spring.version>
+        <mybatis-ehcache.version>1.0.2</mybatis-ehcache.version>
     </properties>
 
     <scm>
@@ -43,29 +42,172 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-release-plugin</artifactId>
+                <version>2.5.1</version>
             </plugin>
 
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.2</version>
             </plugin>
         </plugins>
 
 
         <pluginManagement>
             <plugins>
-                <!-- jetty -->
+
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-surefire-plugin</artifactId>
+                    <version>2.18</version>
+                    <configuration>
+                        <argLine>-Xmx1024m -XX:MaxPermSize=256m</argLine>
+                    </configuration>
+                </plugin>
+
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-jar-plugin</artifactId>
+                    <version>2.5</version>
+                </plugin>
+
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-war-plugin</artifactId>
+                    <version>2.5</version>
+                </plugin>
+
+                <!-- maven依赖管理插件,用于分析模块的依赖 -->
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-dependency-plugin</artifactId>
+                    <version>2.9</version>
+                </plugin>
+
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-resources-plugin</artifactId>
+                    <version>2.7</version>
+                </plugin>
+
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-install-plugin</artifactId>
+                    <version>2.5.2</version>
+                </plugin>
+
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-deploy-plugin</artifactId>
+                    <version>2.8.2</version>
+                </plugin>
+
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-source-plugin</artifactId>
+                    <version>2.4</version>
+                    <executions>
+                        <execution>
+                            <id>attach-sources</id>
+                            <goals>
+                                <goal>jar</goal>
+                            </goals>
+                        </execution>
+                    </executions>
+                </plugin>
+
                 <plugin>
                     <groupId>org.mortbay.jetty</groupId>
                     <artifactId>jetty-maven-plugin</artifactId>
-                    <version>7.2.0.RC0</version>
+                    <version>8.1.7.v20120910</version>
+                    <!--<configuration>-->
+                    <!--<scanIntervalSeconds>10</scanIntervalSeconds>-->
+                    <!--<stopKey>ofpay</stopKey>-->
+                    <!--<stopPort>9999</stopPort>-->
+                    <!--<jvmArgs>-Xmx1024m -XX:PermSize=128m -XX:MaxPermSize=256m</jvmArgs>-->
+                    <!--</configuration>-->
+                    <!-- 用于集成测试 -->
+                    <!-- <executions> <execution> <id>start-jetty</id> <phase>pre-integration-test</phase>
+                        <goals> <goal>stop</goal> <goal>run</goal> </goals> <configuration> <scanIntervalSeconds>0</scanIntervalSeconds>
+                        <daemon>true</daemon> </configuration> </execution> <execution> <id>stop-jetty</id>
+                        <phase>post-integration-test</phase> <goals> <goal>stop</goal> </goals> </execution>
+                        </executions> -->
+                </plugin>
+
+                <!-- site -->
+                <plugin>
+                    <groupId>org.codehaus.mojo</groupId>
+                    <artifactId>cobertura-maven-plugin</artifactId>
+                    <version>2.5.2</version>
                     <configuration>
-                        <webAppConfig>
-                            <contextPath>/</contextPath>
-                        </webAppConfig>
-                        <scanIntervalSeconds>5</scanIntervalSeconds>
-                        <!--<encoding>${project.build.sourceEncoding}</encoding> -->
+                        <aggregate>true</aggregate>
+                        <formats>
+                            <format>html</format>
+                            <format>xml</format>
+                        </formats>
                     </configuration>
+                </plugin>
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-checkstyle-plugin</artifactId>
+                    <version>2.13</version>
+                </plugin>
+
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-pmd-plugin</artifactId>
+                    <version>3.3</version>
+                    <configuration>
+                        <aggregate>true</aggregate>
+                        <!-- PMD options -->
+                        <targetJdk>${maven.compiler.target}</targetJdk>
+                        <aggregate>true</aggregate>
+                        <format>xml</format>
+                        <!-- <rulesets> <ruleset>/pmd-rules.xml</ruleset> </rulesets> -->
+
+                        <!-- CPD options -->
+                        <minimumTokens>20</minimumTokens>
+                        <ignoreIdentifiers>true</ignoreIdentifiers>
+                    </configuration>
+                </plugin>
+
+                <plugin>
+                    <groupId>org.codehaus.mojo</groupId>
+                    <artifactId>findbugs-maven-plugin</artifactId>
+                    <version>2.5.1</version>
+                    <configuration>
+                        <effort>Max</effort>
+                        <xmlOutput>true</xmlOutput>
+                        <maxRank>15</maxRank>
+                        <threshold>Low</threshold>
+                        <maxHeap>1024</maxHeap>
+                    </configuration>
+                </plugin>
+
+                <plugin>
+                    <groupId>org.codehaus.mojo</groupId>
+                    <artifactId>javancss-maven-plugin</artifactId>
+                    <version>2.0</version>
+                </plugin>
+
+                <!-- javadoc -->
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-javadoc-plugin</artifactId>
+                    <version>2.10.1</version>
+                    <configuration>
+                        <aggregate>true</aggregate>
+                        <show>public</show>
+                        <maxmemory>1024</maxmemory>
+                        <failOnError>false</failOnError>
+                        <javadocVersion>1.7</javadocVersion>
+                    </configuration>
+                </plugin>
+
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-assembly-plugin</artifactId>
+                    <version>2.5.4</version>
                 </plugin>
 
             </plugins>
@@ -77,6 +219,7 @@
     </build>
 
     <repositories>
+        <!--
         <repository>
             <id>ofpay-public</id>
             <name>intranet public groups</name>
@@ -85,11 +228,139 @@
                 <enabled>false</enabled>
             </snapshots>
         </repository>
-
+        -->
     </repositories>
 
     <dependencyManagement>
         <dependencies>
+
+            <!-- db-->
+            <dependency>
+                <groupId>net.sf.ehcache</groupId>
+                <artifactId>ehcache-jgroupsreplication</artifactId>
+                <version>1.7</version>
+            </dependency>
+            <dependency>
+                <groupId>commons-dbcp</groupId>
+                <artifactId>commons-dbcp</artifactId>
+                <version>1.4</version>
+            </dependency>
+            <dependency>
+                <groupId>net.ju-n.commons-dbcp-jmx</groupId>
+                <artifactId>commons-dbcp-jmx-jdbc4</artifactId>
+                <version>0.2.2</version>
+            </dependency>
+            <dependency>
+                <groupId>mysql</groupId>
+                <artifactId>mysql-connector-java</artifactId>
+                <version>5.1.24</version>
+                <scope>runtime</scope>
+            </dependency>
+
+
+            <!-- Mybatis -->
+            <dependency>
+                <groupId>org.mybatis</groupId>
+                <artifactId>mybatis</artifactId>
+                <version>${mybatis.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.mybatis</groupId>
+                <artifactId>mybatis-spring</artifactId>
+                <version>${mybatis-spring.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.mybatis.caches</groupId>
+                <artifactId>mybatis-ehcache</artifactId>
+                <version>${mybatis-ehcache.version}</version>
+            </dependency>
+
+
+            <!--slf4j -->
+            <dependency>
+                <groupId>org.slf4j</groupId>
+                <artifactId>slf4j-api</artifactId>
+                <version>${slf4j.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>org.slf4j</groupId>
+                <artifactId>jcl-over-slf4j</artifactId>
+                <version>${slf4j.version}</version>
+                <scope>runtime</scope>
+            </dependency>
+
+            <dependency>
+                <groupId>org.slf4j</groupId>
+                <artifactId>log4j-over-slf4j</artifactId>
+                <version>${slf4j.version}</version>
+            </dependency>
+
+
+
+            <!-- spring begin -->
+            <dependency>
+                <groupId>org.springframework</groupId>
+                <artifactId>spring-core</artifactId>
+                <version>${springframework.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.springframework</groupId>
+                <artifactId>spring-aop</artifactId>
+                <version>${springframework.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.springframework</groupId>
+                <artifactId>spring-context</artifactId>
+                <version>${springframework.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.springframework</groupId>
+                <artifactId>spring-context-support</artifactId>
+                <version>${springframework.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.springframework</groupId>
+                <artifactId>spring-tx</artifactId>
+                <version>${springframework.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.springframework</groupId>
+                <artifactId>spring-beans</artifactId>
+                <version>${springframework.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.springframework</groupId>
+                <artifactId>spring-jdbc</artifactId>
+                <version>${springframework.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.springframework</groupId>
+                <artifactId>spring-test</artifactId>
+                <version>${springframework.version}</version>
+                <scope>test</scope>
+            </dependency>
+            <dependency>
+                <groupId>org.springframework</groupId>
+                <artifactId>spring-orm</artifactId>
+                <version>${springframework.version}</version>
+            </dependency>
+            <!-- spring end -->
+
+            <!-- spring web -->
+            <dependency>
+                <groupId>org.springframework</groupId>
+                <artifactId>spring-web</artifactId>
+                <version>${springframework.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.springframework</groupId>
+                <artifactId>spring-webmvc</artifactId>
+                <version>${springframework.version}</version>
+            </dependency>
+
+            <!--spring web end-->
+
 
 
             <dependency>
